--- a/GenericTests/Info.plist
+++ b/GenericTests/Info.plist
@@ -2,6 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This should work</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>This should work</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>This should work as well... Bring on the Usage!</string>
+	<key>NSCameraUsageDescription</key>
+	<string>This should work. Bring on the usage!</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
